added portfolio site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="open-sans-normal">
     <header class="header secondary-bg">
         <nav>
-            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <h3 class="nav-title">Ro<span class="text-primary">b</span>i</h3>
             <ul>
                 <li><a class="dark-2" href="">Portfolio</a></li>
                 <li><a class="dark-2" href="">Blog</a></li>
@@ -22,12 +22,12 @@
         <div class="banner">
             <div class="banner-content">
                 <h4 class="banner-greeting dark-2">Hi, I am</h4>
-                <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum officiis deserunt similique cupiditate, a dolores!</p>
+                <h1 class="banner-title">Robiul Alam</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
-            <img class="banner-profile-pic" src="images/hardy.png" alt="">
+            <img class="banner-profile-pic" src="images/robi.png" alt="">
         </div>
     </header>
     <main>
