--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <h4 class="banner-greeting dark-2">Hi, I am</h4>
                 <h1 class="banner-title">Robiul Alam</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
-                <button class="btn-primary"><i class="fa-solid fa-phone"></i>Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>  Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i>  Contact</button>
             </div>
             <img class="banner-profile-pic" src="images/robi.png" alt="">
         </div>
@@ -137,7 +137,7 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
                 </div>
             </div>
             <div class="text-center resume-download">
-                <button class="btn-primary"><i class="fa-solid fa-download"></i>Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
@@ -154,7 +154,7 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
             </div>
         </div>
         <div class="footer-column">
-            <h3 class="footer-head">Let's Message Me</h3>
+            <h3 class="footer-head">Let's Inbox Me</h3>
             <form action="">
                 <input type="text" name="" id="" placeholder="Your Name">
                 <input type="email" name="" id="" placeholder="Your Email">
